# ghost_agent_icp

./: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/ghost_agent_icp/: Cargo.toml  ghost_agent_icp.did
src/ghost_agent_icp/src/: lib.rs
src/ghost_agent_icp_frontend/src/: index.html  index.js
