[package]
name = "ghost_agent_icp"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.7"
ic-cdk-macros = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Candid support for serialization
candid = "0.8.4"

# Fix UUID issue by enabling `v4` + `js` support for WebAssembly
uuid = { version = "1.3.0", features = ["v4", "js"] }

# Correct `getrandom` settings for Wasm environments
getrandom = { version = "0.2.10", features = ["js"] }

# Rust-based ZK Proofs
ark-groth16 = "0.3"
ark-std = "0.3"
ark-crypto-primitives = "0.3"

# Stable memory storage (Remove `derive` feature)
ic-stable-structures = "0.5"

# Cryptographic hash functions
blake2 = "0.10"

# Error handling utilities
thiserror = "1.0"
